@@ -1,3 +1,6 @@
+13 Apr 2007 coudercd
+ * fixed library source labels generation.
+
 10 Apr 2007 coudercd
  * resized ressources in pmkscan for larger projects.
  * added more messages in pmkscan.
